--- a/index.html
+++ b/index.html
@@ -28,18 +28,12 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Galway Visually Impaired Activity Club</h1>
-            <h2>Galway Visually Impaired Activity Club</h2>
+            <h2>Getting out and about</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/alanburke/gvia/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/alanburke/gvia/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
 
 
       <span class="banner-fix"></span>
