--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/alanburke/gvia">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -40,7 +39,7 @@
 
 
       <section id="main_content">
-        <h3>
+        <h3 style="margin-top:25px;">
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
