Add Facebook link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <p>The GVI is a group of blind and visually impaired people who organise activities for their members.</p>
 <p>Current activities include tandem cycling, spinning and walking.</p>
 <p>To join or get involved as a volunteer, email <a href="mailto:gviaclub@gmail.com">giviaclub@gmail.com</a></p>
+<p>Keep up to date on <a href="https://www.facebook.com/GalwayVisuallyImpairedActivityClub">our facebook page</a>.</p>
 
       </section>
 
@@ -55,7 +56,6 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
       </footer>
 
